@@ -129,6 +129,9 @@ Library
 - Issue #14653: email.utils.mktime_tz() no longer relies on system
   mktime() when timezone offest is supplied.
 
+- Issue #6056: Make multiprocessing use setblocking(True) on the
+  sockets it uses.  Original patch by J Derek Wilson.
+
 - Issue #15101: Make pool finalizer avoid joining current thread.
 
 - Issue #15054: A bug in tokenize.tokenize that caused string literals
